pkg/front_end/testcases/dot_shorthands/private_class_in_library.dart.strong.transformed.expect
library;
//
// Problems in library:
//
// pkg/front_end/testcases/dot_shorthands/private_class_in_library.dart:26:7: Error: A value of type '_C Function()' can't be assigned to a variable of type '_C'.
//  - '_C' is from 'pkg/front_end/testcases/dot_shorthands/private_class_in_library.dart'.
//   w = .new; // Error. Can't be assigned, but we're able to use the `_C` type.
//       ^
//
import self as self;
import "dart:core" as core;

typedef Public_C = self::_C;
typedef Public_Const = self::_Const;
class _C extends core::Object {
  constructor named() → self::_C
    : super core::Object::•()
    ;
  constructor •() → self::_C
    : super core::Object::•()
    ;
  static get getter() → self::_C
    return new self::_C::•();
  static method method() → self::_C
    return new self::_C::•();
}
class _Const extends core::Object /*hasConstConstructor*/  {
  const constructor •() → self::_Const
    : super core::Object::•()
    ;
  const constructor named() → self::_Const
    : super core::Object::•()
    ;
}
static final field self::_C v = new self::_C::•();
static const field self::_Const constV = #C1;
static method test() → void {
  self::_C w = self::v;
  w = new self::_C::•();
  w = invalid-expression "pkg/front_end/testcases/dot_shorthands/private_class_in_library.dart:26:7: Error: A value of type '_C Function()' can't be assigned to a variable of type '_C'.
 - '_C' is from 'pkg/front_end/testcases/dot_shorthands/private_class_in_library.dart'.
  w = .new; // Error. Can't be assigned, but we're able to use the `_C` type.
      ^" in #C2 as{TypeError} self::_C;
  w = self::_C::getter;
  w = self::_C::method();
  w = new self::_C::named();
  w = new self::_C::•();
  self::_Const constW = #C1;
  constW = #C1;
  constW = #C1;
  constW = #C1;
}

constants  {
  #C1 = self::_Const {}
  #C2 = constructor-tearoff self::_C::•
}


Constructor coverage from constants:
org-dartlang-testcase:///private_class_in_library.dart:
- _Const. (from org-dartlang-testcase:///private_class_in_library.dart:16:9)
- Object. (from org-dartlang-sdk:///sdk/lib/core/object.dart)
- _Const.named (from org-dartlang-testcase:///private_class_in_library.dart:17:9)
